todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: todo-app
          image: PROJECT/APP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /usr/src/app/files
              name: shared-volume
