todo_app/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: project-route
  namespace: project
spec:
  parentRefs:
  - name: project-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todo-app-svc
      port: 2347
  - matches:
    - path:
        type: PathPrefix
        value: /todos
    backendRefs:
    - name: todo-backend-svc
      port: 2349
